# IncubatorProject

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
IncubatorLib/: CMakeLists.txt
IncubatorLib/include/Incubator/: IModel.h  IncubatorApp.h  IncubatorDependencies.h  InternalFlashModel.h  Presenter.h
IncubatorLib/include/Incubator/Controller/: EnumState.h  HumidityController.h  TemperatureController.h
IncubatorLib/include/Incubator/IncubatorData/: AdminData.h  EnumSensorStatus.h  IncubatorDataConstants.h  IncubatorInformationData.h  PidData.h  SensorsStatusData.h  SettingsData.h  TimeInformationData.h
IncubatorLib/include/Incubator/Model/: EepromModel.h  FlashBuffer.h  IModel.h  InternalFlashModel.h
IncubatorLib/include/Incubator/Presenter/: Presenter.h
IncubatorLib/include/Incubator/Time/: TimeUtils.h  TimerTask.h
IncubatorLib/src/Incubator/: EepromModel.cpp  IncubatorApp.cpp  InternalFlashModel.cpp  Lcd2004View.cpp  Presenter.cpp
IncubatorTestSimulator/: CMakeLists.txt
IncubatorTestSimulator/src/: IncubatorTestSimulator.cpp  IncubatorTestSimulator.h  Main.cpp  SimulatorDependencies.cpp
IncubatorTestSimulator/src/DHT11Component/: DHT11Component.cpp  DHT11Component.h
IncubatorTestSimulator/src/JoystickButton/: JoystickButton.cpp  JoystickButton.h
IncubatorTestSimulator/src/NTCComponent/: NTCComponent.cpp  NTCComponent.h
IncubatorTestSimulator/src/Output/: OutputComponent.cpp  OutputComponent.h
IncubatorTestSimulator/src/SHT31Component/: SHT31Component.cpp  SHT31Component.h
IncubatorTestSimulator/src/TC2004Screen/: TC2004Screen.cpp  TC2004Screen.h
IncubatorTestSimulator/src/Utils/: IncubatorTestSimulatorUtils.cpp  IncubatorTestSimulatorUtils.h
IncubatorTestSimulator/src/Widgets/: OnOffWidget.cpp  OnOffWidget.h  Slider.cpp  Slider.h
scripts/: build.sh  clean.sh  (+2 more)
(+140 files in other folders)
